--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -48,12 +48,12 @@ body {
 
 table {
   border-collapse: collapse;
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0.3);
   width: 100%; /* Set table width to 100% */
 }
 th,
 td {
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0.3);
   padding: 8px;
   white-space: nowrap; /* Prevent text wrapping */
 }
