1.Input component added 2. tailwind.config.js updated

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -66,6 +66,6 @@ html {
 * Bug color define in taiwind.config.js "brand-color-01": "#00cc9c", is not working
 */
 
-.bg-brand-color-01 {
+/* .bg-brand-color-01 {
   background-color: #00cc9c;
-}
+} */
