--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,16 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Font+Awesome+5+Free:wght@400&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 body {
   @apply leading-[normal] m-0;
 }
+
 *,
 ::before,
 ::after {
   border-width: 0;
+  box-sizing: border-box;
+  border-style: solid;
 }
 
 .font-sf-pro-display {
