--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -28,18 +28,18 @@ body {
 /* ------------------------ */
 @layer utilities {
   /* Hide the scrollbar */
-  .hide-scroll::-webkit-scrollbar {
+  .thin-scroll-bar::-webkit-scrollbar {
     display: none;
   }
 
   /* Set scrollbar width and track color */
-  .hide-scroll {
+  .thin-scroll-bar {
     scrollbar-width: thin;
     scrollbar-color: rgba(155, 155, 155, 1) rgba(255, 255, 255, 0.1);
   }
 
   /* Set scrollbar thumb color */
-  .hide-scroll::-webkit-scrollbar-thumb {
+  .thin-scroll-bar::-webkit-scrollbar-thumb {
     scrollbar-width: thin;
     background-color: rgba(155, 155, 155, 0.5);
     border-radius: 6px;
@@ -47,7 +47,7 @@ body {
   }
 
   /* Set scrollbar thumb hover color */
-  .hide-scroll::-webkit-scrollbar-thumb:hover {
+  .thin-scroll-bar::-webkit-scrollbar-thumb:hover {
     background-color: rgba(155, 155, 155, 0.8);
   }
 }
@@ -55,12 +55,12 @@ body {
 table {
   border-collapse: collapse;
   border: 1px solid rgba(0, 0, 0, 0.3);
-  width: 100%; /* Set table width to 100% */
+  width: 100%;
 }
 
 th,
 td {
   border: 1px solid rgba(0, 0, 0, 0.3);
   padding: 8px;
-  white-space: nowrap; /* Prevent text wrapping */
+  white-space: nowrap;
 }
